--- a/package.json
+++ b/package.json
@@ -11,11 +11,15 @@
   "license": "ISC",
   "devDependencies": {
     "css-loader": "^5.0.1",
+    "csv-loader": "^3.0.3",
+    "json5": "^2.1.3",
     "style-loader": "^2.0.0",
+    "toml": "^3.0.0",
     "ts-loader": "^8.0.14",
-    "typescript": "^4.1.3",
     "webpack": "^5.16.0",
-    "webpack-cli": "^4.4.0"
+    "webpack-cli": "^4.4.0",
+    "xml-loader": "^1.2.1",
+    "yamljs": "^0.3.0"
   },
   "dependencies": {
     "html-webpack-plugin": "^4.5.1",
