--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "description": "",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "watch": "webpack --watch",
+    "start": "webpack serve --open",
+    "server": "node server.js",
     "build": "webpack"
   },
   "keywords": [],
@@ -11,8 +14,10 @@
   "license": "ISC",
   "devDependencies": {
     "clean-webpack-plugin": "^3.0.0",
+    "express": "^4.17.1",
     "webpack": "^5.16.0",
-    "webpack-cli": "^4.4.0"
+    "webpack-cli": "^4.4.0",
+    "webpack-dev-middleware": "^4.1.0"
   },
   "dependencies": {
     "html-webpack-plugin": "^4.5.1",
