--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "license": "ISC",
   "devDependencies": {
     "clean-webpack-plugin": "^3.0.0",
+    "exports-loader": "^2.0.0",
     "express": "^4.17.1",
     "webpack": "^5.16.0",
     "webpack-cli": "^4.4.0",
@@ -21,6 +22,7 @@
   },
   "dependencies": {
     "html-webpack-plugin": "^4.5.1",
+    "imports-loader": "^2.0.0",
     "lodash": "^4.17.20"
   }
 }
