--- a/package.json
+++ b/package.json
@@ -16,13 +16,15 @@
     "clean-webpack-plugin": "^3.0.0",
     "exports-loader": "^2.0.0",
     "express": "^4.17.1",
+    "imports-loader": "^2.0.0",
     "webpack": "^5.16.0",
     "webpack-cli": "^4.4.0",
     "webpack-dev-middleware": "^4.1.0"
   },
   "dependencies": {
+    "babel-polyfill": "^6.26.0",
     "html-webpack-plugin": "^4.5.1",
-    "imports-loader": "^2.0.0",
-    "lodash": "^4.17.20"
+    "lodash": "^4.17.20",
+    "whatwg-fetch": "^3.6.2"
   }
 }
