--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "dev": "webpack-dev-server"
   },
   "devDependencies": {
+    "css-loader": "^0.28.0",
+    "style-loader": "^0.19.0",
     "html-webpack-plugin": "3.2.0",
     "react": "^18.2.0",
     "webpack": "4.29.4",
